<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_message">This software uses map data provided by OpenStreetMap.org</string>
    <string name="about_transport">About transport</string>
    <string name="about_vehicle">About vehicle</string>
    <string name="access_enabled">Transport set in access</string>
    <string name="access_error">"Sorry, but you
not have access to this section.
Contact your supervisor"</string>
    <string name="access_removed">Transport removed from access</string>
    <string name="access_restricted">Application access is restricted</string>
    <string name="access_to">Access to «EM system», service application, creating zones and parking lots, etc.</string>
    <string name="action">Action</string>
    <string name="activation_vehicle">Vehicle activation</string>
    <string name="active_alarms">Active alarms</string>
    <string name="active_order_client_number">"Client phone number: "</string>
    <string name="active_order_debts">"Debts: "</string>
    <string name="active_order_status">"Status: "</string>
    <string name="active_order_withdrawn">"Withdrawn: "</string>
    <string name="active_repairs">Active repairs</string>
    <string name="add">Add</string>
    <string name="add_completed_work">Add completed work</string>
    <string name="add_more">Add more</string>
    <string name="add_part">Add</string>
    <string name="add_repair_part">Add repair part</string>
    <string name="add_tc">Add vehicle</string>
    <string name="add_tc_inventory">Add vehicles to complete tasks</string>
    <string name="add_vehicles">Add vehicles to complete tasks</string>
    <string name="add_work_type">+ Add</string>
    <string name="added_by">Added by</string>
    <string name="additional_equipment">Additional equipment</string>
    <string name="afganistan_hint">70 123 4567</string>
    <string name="afghanistan">Afghanistan</string>
    <string name="after_completing_the_task">After completing the task</string>
    <string name="aland_islands">Åland Islands</string>
    <string name="aland_islands_hint">41 2345678</string>
    <string name="alarm_handling">Operate</string>
    <string name="alarm_open_map">Open map</string>
    <string name="alarm_types">Types of Alarms</string>
    <string name="alarms">Alarms: %d</string>
    <string name="alarms_type_alarm_bad_evaluation">Bad evaluation</string>
    <string name="alarms_type_alarm_configuration_edit">Configuration Edit</string>
    <string name="alarms_type_alarm_doesnt_move">"Doesn't move"</string>
    <string name="alarms_type_alarm_orientaion">Orientaion</string>
    <string name="alarms_type_charge">Charge</string>
    <string name="alarms_type_connection">Connection</string>
    <string name="alarms_type_deposit">Deposit</string>
    <string name="alarms_type_lock">Lock</string>
    <string name="alarms_type_stealing">Stealing</string>
    <string name="alarms_type_unclaimed">Unclaimed</string>
    <string name="alarms_type_zone">Zone</string>
    <string name="alarms_types">Alarm types</string>
    <string name="albania">Albania</string>
    <string name="albania_hint">67 212 3456</string>
    <string name="alert_take_photo">Do you want to take a photo?</string>
    <string name="algeria">Algeria</string>
    <string name="algeria_hint">551 23 45 67</string>
    <string name="all">All</string>
    <string name="all_alarms">All alarms</string>
    <string name="all_tasks">All tasks</string>
    <string name="all_vehicles">All vehicles</string>
    <string name="american_samoa">American Samoa</string>
    <string name="american_samoa_hint">684-733-1234</string>
    <string name="andora">Andorra</string>
    <string name="andorra">Andorra</string>
    <string name="andorra_hint">312 345</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="angola">Angola</string>
    <string name="angola_hint">923 123 456</string>
    <string name="anguilla">Anguilla</string>
    <string name="anguilla_hint">(264) 123-1234</string>
    <string name="another">Another</string>
    <string name="antarctica">Antarctica</string>
    <string name="antarctica_hint">xxx xxx</string>
    <string name="antigua_and_barbuda">Antigua and Barbuda</string>
    <string name="antigua_and_barbuda_hint">268-464-1234</string>
    <string name="app_name">ST Service</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_for_service">Application for sharing service team</string>
    <string name="argentina">Argentina</string>
    <string name="argentina_hint">9 11 2345-6789</string>
    <string name="armenia">Armenia</string>
    <string name="armenia_hint">77 123456</string>
    <string name="aruba">Aruba</string>
    <string name="aruba_hint">560 1234</string>
    <string name="ask_for_help">Ask</string>
    <string name="assign_executor">Assign an executor</string>
    <string name="attention">Attention!</string>
    <string name="australia">Australia</string>
    <string name="australia_hint">412 345 678</string>
    <string name="austria">Austria</string>
    <string name="austria_hint">664 123456</string>
    <string name="auth_get_sms_code">Get the code</string>
    <string name="auth_in_application_1">Log in</string>
    <string name="auth_in_application_2">to the app</string>
    <string name="auth_login">Enter</string>
    <string name="auth_phone_number">By phone number</string>
    <string name="auth_title">Confirmation code sent to the number:</string>
    <string name="available_for_execution">Will be available for execution</string>
    <string name="azerbaijan">Azerbaijan</string>
    <string name="azerbaijan_hint">40 123 45 67</string>
    <string name="bahamas">Bahamas</string>
    <string name="bahamas_hint">242-359-1234</string>
    <string name="bahrain">Bahrain</string>
    <string name="bahrain_hint">3600 1234</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="bangladesh_hint">1812-345678</string>
    <string name="barbados">Barbados</string>
    <string name="barbados_hint">246-250-1234</string>
    <string name="base">OSM base layer</string>
    <string name="base_nl">Netherlands base overlay</string>
    <string name="battery">Battery</string>
    <string name="batteryService_busy">" already in "</string>
    <string name="batteryService_change_state">Change state</string>
    <string name="batteryService_charge_onFailure">Failed to put old battery into Move to store</string>
    <string name="batteryService_empty_list">Empty list</string>
    <string name="batteryService_installed">" Installed in "</string>
    <string name="batteryService_not_find">"Failed to find battery information "</string>
    <string name="batteryService_not_find_in_vehicle">"Failed to find battery information in vehicle "</string>
    <string name="batteryService_work_onFailure">"Failed to put the battery into operating mode "</string>
    <string name="batteryService_wrong_list_battery">More than one battery with this number</string>
    <string name="batteryService_wrong_list_vehicle">There are more than one batteries in the transport</string>
    <string name="battery_added">Added to the list</string>
    <string name="battery_busy">Battery in vehicle</string>
    <string name="battery_change_list">Change list</string>
    <string name="battery_change_state">Change state</string>
    <string name="battery_charge_onFailure">Failed to put old battery into Move to store</string>
    <string name="battery_driver">Battery Driver</string>
    <string name="battery_empty_list">Empty list</string>
    <string name="battery_in_list">Battery already in list</string>
    <string name="battery_installed" formatted="false">%s Installed in %s</string>
    <string name="battery_not_find">Failed to find battery information</string>
    <string name="battery_not_find_in_vehicle">Failed to find battery information in vehicle</string>
    <string name="battery_number_six">The battery number should only be 6 digits</string>
    <string name="battery_only_user">Batteries on me</string>
    <string name="battery_select_state">Select state</string>
    <string name="battery_state_all">All</string>
    <string name="battery_state_bad">Bad</string>
    <string name="battery_state_charged">Charged</string>
    <string name="battery_state_charging">Charging</string>
    <string name="battery_state_check">Check</string>
    <string name="battery_state_disassembled">Disassembled</string>
    <string name="battery_state_move_from_store">Move from store</string>
    <string name="battery_state_move_to_store">Move to store</string>
    <string name="battery_state_new">New</string>
    <string name="battery_state_repair">Repair</string>
    <string name="battery_state_stolen">Stolen</string>
    <string name="battery_state_waiting">Wait charge on store</string>
    <string name="buttonService_edit">Edit</string>
    <string name="buttonService_enter_full_number">Enter the full number</string>
    <string name="cancel">Cancel</string>
    <string name="card_photo_damage">Photo damage</string>
    <string name="created_your_first_task">"Create your first task
with a list of vehicles from the multiscanner"</string>
    <string name="delayed">Delayed</string>
    <string name="here_completed_tasks">"Here will be your completed
tasks"</string>
    <string name="here_delayed_tasks">"Here are your tasks
marked Delayed"</string>
    <string name="input">Input</string>
    <string name="management">Management</string>
    <string name="new_task">New task</string>
    <string name="no_completed_tasks">No completed tasks 🙂</string>
    <string name="no_delayed_tasks">No delayed tasks 🙂</string>
    <string name="no_tasks_created">No tasks created 🙂</string>
    <string name="publication">Publication</string>
    <string name="publish_now">Publish Now</string>
    <string name="task_card_date">Date</string>
    <string name="task_card_description">Description</string>
    <string name="task_card_name">Vehicle</string>
    <string name="task_card_technic">Technician</string>
</resources>