<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/fragmentAuthParent" android:background="@color/white" android:focusable="false" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:orientation="horizontal" android:id="@id/selectCity" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="45.0dip">
        <androidx.appcompat.widget.AppCompatImageButton android:id="@id/backBtn" android:background="@null" android:padding="10.0dip" android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@drawable/ic_back" android:scaleType="fitCenter" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="21.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/topTitle" android:layout_width="@dimen/dp_0" android:layout_height="45.0dip" android:text="@string/app_name" android:layout_weight="1.0" />
        <View android:layout_width="45.0dip" android:layout_height="45.0dip" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView android:textSize="20.0sp" android:textColor="@color/black" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/auth_title" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="20.0sp" android:textColor="@color/black" android:id="@id/textPhoneNumber" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <androidx.appcompat.widget.AppCompatEditText android:textSize="28.0sp" android:gravity="center" android:id="@id/editSmsCode" android:padding="@dimen/dp_0" android:layout_width="150.0dip" android:layout_height="wrap_content" android:hint="@string/input" android:inputType="number" />
    <androidx.appcompat.widget.AppCompatButton android:textColor="@color/white" android:id="@id/enterConfirmationBtn" android:background="@color/colorPrimary" android:layout_width="150.0dip" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" android:text="@string/auth_login" />
</androidx.appcompat.widget.LinearLayoutCompat>
