<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/managementTaskEditDelayedConstraint" android:background="@drawable/card_top_curve" android:padding="@dimen/dp_16" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/sp_20" android:textColor="@color/monochromeBlack" android:id="@id/managementTaskEditDelayedTitle" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:text="@string/delayed" android:fontFamily="@font/tt_commons_demi_bold" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/sp_16" android:textColor="@color/monochromeGrey50" android:id="@id/managementTaskEditDelayedHint" android:visibility="visible" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_6" android:text="@string/publication" android:fontFamily="@font/roboto_regular" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/managementTaskEditDelayedTitle" />
    <androidx.core.widget.NestedScrollView android:id="@id/managementTaskEditDelayedNestedScroll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginVertical="@dimen/dp_16" app:layout_constraintBottom_toTopOf="@id/managementTaskEditDelayedCancelBtn" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/managementTaskEditDelayedHint">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/sp_18" android:textColor="@color/monochromeBlack" android:id="@id/managementTaskEditDelayedPublish" android:background="@drawable/multi_list_action_item_background_up" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/publish_now" android:drawablePadding="@dimen/dp_16" android:fontFamily="@font/roboto_regular" android:paddingHorizontal="@dimen/dp_16" android:paddingVertical="@dimen/dp_14" app:drawableStartCompat="@drawable/ic_arrow_up" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="@dimen/sp_18" android:textColor="@color/monochromeBlack" android:id="@id/managementTaskEditDelayedExecutor" android:background="@drawable/multi_list_action_item_background_center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/assign_executor" android:drawablePadding="@dimen/dp_16" android:fontFamily="@font/roboto_regular" android:paddingHorizontal="@dimen/dp_16" android:paddingVertical="@dimen/dp_14" app:drawableStartCompat="@drawable/ic_user_purple" app:layout_constraintTop_toBottomOf="@id/managementTaskEditDelayedPublish" />
            <TextView android:textSize="@dimen/sp_18" android:textColor="@color/monochromeBlack" android:id="@id/managementTaskEditDelayedEdit" android:background="@drawable/multi_list_action_item_background_down" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/buttonService_edit" android:drawablePadding="@dimen/dp_16" android:fontFamily="@font/roboto_regular" android:paddingHorizontal="@dimen/dp_16" android:paddingVertical="@dimen/dp_14" app:drawableStartCompat="@drawable/ic_purple_pencil" app:layout_constraintTop_toBottomOf="@id/managementTaskEditDelayedExecutor" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/sp_18" android:textColor="@color/purpleNight" android:id="@id/managementTaskEditDelayedCancelBtn" android:background="@drawable/purple_10_shape" android:layout_width="fill_parent" android:layout_height="@dimen/dp_56" android:text="@string/cancel" android:textAllCaps="false" android:fontFamily="@font/roboto_medium" android:stateListAnimator="@null" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
