<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/monochromeGrey5" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/managementTasksHeader" android:background="@drawable/background_bottom_white_16" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/backBtnManagement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/dp_16" app:layout_constraintBottom_toBottomOf="@id/titleBtnManagement" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/titleBtnManagement" app:srcCompat="@drawable/ic_arrow_left_black" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_20" android:textStyle="bold" android:textColor="@color/monochromeBlack" android:id="@id/titleBtnManagement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/management" android:fontFamily="@font/tt_commons_medium" android:layout_marginStart="@dimen/dp_24" android:layout_marginVertical="@dimen/dp_16" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/backBtnManagement" app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/filterBtnManagement" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/dp_16" app:layout_constraintBottom_toBottomOf="@id/titleBtnManagement" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/titleBtnManagement" app:srcCompat="@drawable/ic_black_filter" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:orientation="vertical" android:id="@id/titleNoCreatedManagementTasks" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/managementTasksHeader">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_20" android:textColor="@color/monochromeBlack" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_8" android:text="@string/no_tasks_created" android:fontFamily="@font/tt_commons_bold" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_18" android:textColor="@color/monochromeGrey50" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/created_your_first_task" android:fontFamily="@font/roboto_regular" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:orientation="vertical" android:id="@id/titleNoDelayedManagementTasks" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/managementTasksHeader">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_20" android:textColor="@color/monochromeBlack" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_8" android:text="@string/no_delayed_tasks" android:fontFamily="@font/tt_commons_bold" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_18" android:textColor="@color/monochromeGrey50" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/here_delayed_tasks" android:fontFamily="@font/roboto_regular" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:orientation="vertical" android:id="@id/titleNoCompletedManagementTasks" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/managementTasksHeader">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_20" android:textColor="@color/monochromeBlack" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_8" android:text="@string/no_completed_tasks" android:fontFamily="@font/tt_commons_bold" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/sp_18" android:textColor="@color/monochromeGrey50" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/here_completed_tasks" android:fontFamily="@font/roboto_regular" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/managementTasksRV" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/dp_0" android:layout_marginTop="@dimen/dp_8" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constraintBottom_toTopOf="@id/managementTasksNewTasksLinear" app:layout_constraintTop_toBottomOf="@id/managementTasksHeader" app:layout_constraintVertical_bias="1.0" />
    <androidx.appcompat.widget.LinearLayoutCompat android:gravity="center" android:orientation="vertical" android:id="@id/managementTasksNewTasksLinear" android:background="@drawable/background_top_white_16" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <androidx.appcompat.widget.AppCompatButton android:enabled="true" android:textSize="@dimen/sp_18" android:textColor="@drawable/white_grey50" android:id="@id/newTasksBtnManagementTasks" android:background="@drawable/background_purple_night_grey_10_r_16" android:layout_width="fill_parent" android:layout_height="@dimen/dp_56" android:layout_margin="@dimen/dp_16" android:text="@string/new_task" android:textAllCaps="false" android:fontFamily="@font/roboto_medium" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
