<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:id="@id/task_card" android:background="@drawable/background_primary" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:paddingStart="5.0dip" android:paddingEnd="5.0dip" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip">
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/white" android:id="@id/task_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/task_card_name" />
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/white" android:id="@id/task_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/task_card_date" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:weightSum="100.0">
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/white" android:id="@id/task_description" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:text="@string/task_card_description" android:layout_weight="90.0" android:textIsSelectable="true" />
        <androidx.appcompat.widget.AppCompatImageButton android:id="@id/task_photo" android:background="@android:color/transparent" android:padding="5.0dip" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:layout_weight="10.0" app:srcCompat="@drawable/ic_photo_white" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:weightSum="100.0">
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/task_technic" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/task_card_technic" android:layout_weight="90.0" />
        <androidx.appcompat.widget.AppCompatImageButton android:id="@id/copy_number_view" android:background="@drawable/icons8_copy_white_50" android:padding="5.0dip" android:visibility="invisible" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:scaleType="center" android:layout_weight="10.0" android:scaleX="0.7" android:scaleY="0.7" android:layout_marginStart="8.0dip" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
